content include stories n images

--- a/web/src/components/_properties.scss
+++ b/web/src/components/_properties.scss
@@ -6,5 +6,8 @@ $border-color-grey: #dbdbdb;
 $border-color-grey-secondary: #efefef;
 $link-color: #0095f6;
 $link-color-secondary: #b3dffc;
-$font: 'Montserrat',
-sans-serif;
+$font: 'Montserrat', sans-serif;
+$gradient-one: #da3394;
+$gradient-two: #e03c67;
+$gradient-three: #f3753b;
+$gradient-four: #f99b4a;
