--- a/web/src/components/content/content.scss
+++ b/web/src/components/content/content.scss
@@ -2,7 +2,7 @@
 
 .content {
     background-color: $background-grey;
-
+    height:500vh;
     .content-container {
         padding-top: 60px;
         display: flex;
