--- a/web/src/components/navigation/navigation.scss
+++ b/web/src/components/navigation/navigation.scss
@@ -1,7 +1,7 @@
 @import '../properties';
 
 .navigation {
-    // position: fixed;
+    position: fixed;
     top: 0;
     z-index: 2;
     background-color: $background-white;
