--- a/web/src/components/stories/stories.scss
+++ b/web/src/components/stories/stories.scss
@@ -3,6 +3,14 @@
 .stories {
     background-color: $background-white;
     width: 600px;
-    height: 100px;
+    height: 120px;
     border: 1px solid $border-color-grey;
+    border-radius: 3px;
+    margin-top: 30px;
+    .stories-container{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
 }
